Fix spacing issue #38

--- a/client/src/containers/Dashboard/Dashboard.scss
+++ b/client/src/containers/Dashboard/Dashboard.scss
@@ -14,7 +14,9 @@ $dashboard-max-width: 1040px;
 }
 
 .dashboard-tracking {
-  @include media(">big-phone") {
+  padding: 0 30px;
+  
+  @include media(">tablet") {
     display: flex;
   }
 }
